Nu funkar bilderna i testen

--- a/views/test.hbs
+++ b/views/test.hbs
@@ -97,7 +97,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-body">
-                <div class="col-md-6">
+                <div class="">
                     <img src="https://www.totalproducenordic.se/everfresh/Global/Bilder%20Frukt/Exotiskt/Ananas%20web.jpg" style="width:100%">
                 </div>
             </div>
