--- a/views/copyMenu.hbs
+++ b/views/copyMenu.hbs
@@ -1,4 +1,4 @@
-<!-- Page for editing a test -->
+<!-- Page for selecting test to copy -->
 
 <div class="container">
     <div class="col-md-10 col-md-offset-1">
@@ -21,13 +21,9 @@
     </div>
 </div>
 
-
-
 <script>
-
     $(document).on('click', '#copyButton', function() {
         var currTestId = $('select option:selected').attr('class');
         location.replace('/copy=' + currTestId);
     });
-
 </script>
