--- a/views/editMenu.hbs
+++ b/views/editMenu.hbs
@@ -1,4 +1,4 @@
-<!-- Page for editing a test -->
+<!-- Page for selecting test to edit -->
 
 <div class="container">
     <div class="col-md-10 col-md-offset-1">
@@ -21,14 +21,11 @@
     </div>
 </div>
 
-
-
 <script>
-
+    //Sends user to a new page for editing the test
     $(document).on('click', '#editButton', function() {
         console.log($('select option:selected').attr('class'));
         var currTestId = $('select option:selected').attr('class');
         location.replace('/edit=' + currTestId);
     });
-
 </script>
