--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,3 +1,5 @@
+<!-- Page for editing a test -->
+
 <div class="container" id="test">
     <div class="col-lg-10 col-lg-offset-1">
         <div class="row">
