--- a/views/statistics.hbs
+++ b/views/statistics.hbs
@@ -34,9 +34,12 @@
                       <button type="button" class="btn btn-primary" id="statsButton">Se statistik</button>
                   </form>
 
+                  <!-- Progress bar -->
+                  <div class="col-lg-8 col-lg-offset-2" id="progBar"></div>
+
                   <!-- Table displaying statistics -->
                   <table class="table" id="statsTable"></table>
-
+                  
               </div>
         </div>
     </div>
@@ -61,7 +64,6 @@
         sec -= 60;
         min++;
     }
-
     //Fills the statistics table with data
     $("#statsTable").html(`
         <br>
@@ -98,6 +100,17 @@
 
     //When button is clicked, all relevant data is gathered and then page reloads
     $(document).on('click', '#statsButton', function() {
+
+        //Shows progress bar while loading stats
+        $("#progBar").html(`
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar"
+                   aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+                  Laddar
+            </div>
+        </div>
+        `);
+
         var currTestId = $('#testSelect :selected').attr('class');
         var currGroupId = $('#groupSelect :selected').attr('class');
         var currTTitle = $('#testSelect :selected').text();
