--- a/views/results.hbs
+++ b/views/results.hbs
@@ -55,7 +55,7 @@
                         <th colspan="2"><br>
                             Lärarens kommentarer:
                             <div class="form-group">
-                                <textarea class="form-control" id="textArea" rows="10">Bra jobbat!</textarea>
+                                <textarea class="form-control" id="textArea" rows="10">{{TestComment}}</textarea>
                             </div>
                         </th>
                     </tr>
