Uppdaterat texten i inforutorna
för samtliga användartyper

--- a/views/partials/_adminIndex.hbs
+++ b/views/partials/_adminIndex.hbs
@@ -7,7 +7,8 @@
         {{else}}
             <h1>Testverktyg!</h1>
         {{/if}}
-        <p>Lorem ipsum, consectetur adipiscing elit. Curabitur pretium nisl tincidunt congue pulvinar. Maecenas leo orci, sodales vel convallis in, suscipit eu risus. Quisque non egestas magna. Phasellus euismod augue sed neque auctor rhoncus.</p>
+        <p>Välkommen till testverktyget! Skapa ett anpassat test eller nå verktygets andra funktioner
+        genom navigationsmenyn ovan.</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Skapa Test »</a></p>
     </div>
 </div>
@@ -24,8 +25,8 @@
                     <div class="panel-body">
                         <span class="glyphicon glyphicon glyphicon-pencil"></span>
                         <h4>Skapa Test</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis diam ut ipsum dictum
-                            fringilla. Pellentesque nec sapien pharetra felis dictum sollicitudin id quis ante.</p>
+                        <p>Skapa ett test anpassat efter dina villkor i ett enkelt gränssnitt. Verktyget
+                            erbjuder olika frågetyper, självrättande prov, datumbegränsning med mera.</p>
                     </div>
                 </div>
             </div>
@@ -34,8 +35,8 @@
                     <div class="panel-body">
                         <span class="glyphicon glyphicon-stats"></span>
                         <h4>Visa Statistik</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis diam ut ipsum dictum
-                            fringilla. Pellentesque nec sapien pharetra felis dictum sollicitudin id quis ante.</p>
+                        <p>Se statistik över valt test och vald grupp. Se antal
+                        genomförda test, antal godkända test samt snittvärden på poäng och tidsåtgång.</p>
                     </div>
                 </div>
             </div>
@@ -44,8 +45,9 @@
                     <div class="panel-body">
                         <span class="glyphicon glyphicon-hourglass"></span>
                         <h4>Begränsa tid</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis diam ut ipsum dictum
-                            fringilla. Pellentesque nec sapien pharetra felis dictum sollicitudin id quis ante.</p>
+                        <p>Bestäm själv under vilka datum testet ska vara öppet för
+                        testtagare. Självklart kan du även sätta en tidsbegränsning för hur lång
+                        tid man ska ha på sig medan man gör testet.</p>
                     </div>
                 </div>
             </div>
@@ -54,8 +56,9 @@
                     <div class="panel-body">
                         <span class="glyphicon glyphicon-share"></span>
                         <h4>Dela testet</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis diam ut ipsum dictum
-                            fringilla. Pellentesque nec sapien pharetra felis dictum sollicitudin id quis ante.</p>
+                        <p>Välj enkelt vilken grupp eller enskild student du vill dela
+                        testet med. De kommer då att få ett automatiskt mail skickat
+                        till sig.</p>
                     </div>
                 </div>
             </div>
