--- a/views/partials/_studentIndex.hbs
+++ b/views/partials/_studentIndex.hbs
@@ -7,7 +7,8 @@
         {{else}}
             <h1>Testverktyg!</h1>
         {{/if}}
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pretium nisl tincidunt congue pulvinar. Maecenas leo orci, sodales vel convallis in, suscipit eu risus. Quisque non egestas magna. Phasellus euismod augue sed neque auctor rhoncus.</p>
+        <p>Välkommen till testverktyget! Genom menyn ovan kan nå tillgängliga
+        test samt se resultat för redan rättade test.</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Resultat »</a></p>
     </div>
 </div>
