--- a/views/statistics.hbs
+++ b/views/statistics.hbs
@@ -35,7 +35,7 @@
                   </form>
 
                   <!-- Progress bar -->
-                  <div class="col-lg-8 col-lg-offset-2" id="progBar"></div>
+                  <div id="progBar"></div>
 
                   <!-- Table displaying statistics -->
                   <table class="table" id="statsTable"></table>
@@ -106,7 +106,7 @@
         <div class="progress">
             <div class="progress-bar progress-bar-striped active" role="progressbar"
                    aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
-                  Laddar
+                  Laddar...
             </div>
         </div>
         `);
