Engelska -> svenska på login modal

--- a/views/partials/_loggedOutNavbar.hbs
+++ b/views/partials/_loggedOutNavbar.hbs
@@ -22,11 +22,11 @@
 <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
     <div class="modal-dialog">
         <div class="loginmodal-container">
-            <h1>Login to Your Account</h1><br>
+            <h1>Logga in på ditt konto</h1><br>
             <form>
-                <input type="text" name="user" placeholder="Email" id="usernameInput">
-                <input type="password" name="pass" placeholder="Password" id="passwordInput">
-                <input type="submit" name="login" class="login loginmodal-submit" value="Login" id="loginButton" data-toggle="modal" data-target="#login-modal">
+                <input type="text" name="user" placeholder="Epost" id="usernameInput">
+                <input type="password" name="pass" placeholder="Lösenord" id="passwordInput">
+                <input type="submit" name="login" class="login loginmodal-submit" value="Logga in" id="loginButton" data-toggle="modal" data-target="#login-modal">
             </form>
         </div>
     </div>
