--- a/views/email.hbs
+++ b/views/email.hbs
@@ -1,3 +1,7 @@
-Det finns ett nytt Test!!!
+Ett nytt Test finns tillgängligt för dig att göra!
+<br><br>
+Namn: {{testName}}
 <br>
+Senast: {{testDate}}
+<br><br>
 <a href="http://127.0.0.1:3000/">Länk till sidan.</a>
