Fixat med namn och struktur på template

--- a/views/email.hbs
+++ b/views/email.hbs
@@ -1,7 +1,9 @@
-Ett nytt Test finns tillgängligt för dig att göra!
-<br><br>
-Namn: {{testName}}
+Hej {{name}}!
 <br>
-Senast: {{testDate}}
+Det finns ett nytt Test tillgängligt för dig att göra.
 <br><br>
-<a href="http://127.0.0.1:3000/">Länk till sidan.</a>
+Namn på Test: {{testName}}
+<br>
+Senast inlämnat: {{testDate}}
+<br><br>
+<a href="http://127.0.0.1:3000/">Länk till Testverktyget</a>
